--- a/artikel/06.tex
+++ b/artikel/06.tex
@@ -75,10 +75,10 @@
    Interesse liegt oder in Ausübung öffentlicher Gewalt erfolgt, die dem \hyperref[itm:04-7]
    {Verantwortlichen} übertragen wurde. Diese Rechtsgrundlage kann spezifische Bestimmungen zur Anpassung der Anwendung
    der Vorschriften dieser Verordnung enthalten, unter anderem Bestimmungen darüber, welche allgemeinen Bedingungen für
-   die Regelung der Rechtmäßigkeit der \hyperref[itm:04-2]{Verarbeitung} durch den \hyperref[itm:04-7]
+   die Regelung der \hyperref[itm:05-1a]{Rechtmäßigkeit} der \hyperref[itm:04-2]{Verarbeitung} durch den \hyperref[itm:04-7]
    {Verantwortlichen} gelten, welche Arten von Daten verarbeitet werden, welche Personen betroffen sind, an welche
    Einrichtungen und für welche Zwecke die \hyperref[itm:04-1]{personenbezogenen Daten} offengelegt werden dürfen,
-   welcher Zweckbindung sie unterliegen, wie lange sie gespeichert werden dürfen und welche Verarbeitungsvorgänge
+   welcher \hyperref[itm:05-1b]{Zweckbindung} sie unterliegen, wie lange sie gespeichert werden dürfen und welche Verarbeitungsvorgänge
    und -verfahren angewandt werden dürfen, einschließlich Maßnahmen zur Gewährleistung einer rechtmäßig und nach Treu
    und Glauben erfolgenden Verarbeitung, wie solche für sonstige besondere Verarbeitungssituationen gemäß \hyperref
    [part:9]{Kapitel IX}. Das Unionsrecht oder das Recht der Mitgliedstaaten müssen ein im öffentlichen Interesse
