--- a/artikel/07.tex
+++ b/artikel/07.tex
@@ -20,9 +20,10 @@
 
   \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, ihre \hyperref[itm:04-11]{Einwilligung} jederzeit zu
    widerrufen. Durch den Widerruf der
-   \hyperref[itm:04-11]{Einwilligung} wird die Rechtmäßigkeit der aufgrund der \hyperref[itm:04-11]{Einwilligung} bis
-    zum Widerruf erfolgten \hyperref[itm:04-2]{Verarbeitung} nicht berührt. Die \hyperref[itm:04-1]{betroffene Person}
-    wird vor Abgabe der \hyperref[itm:04-11]{Einwilligung} hiervon in Kenntnis gesetzt. Der Widerruf der
+   \hyperref[itm:04-11]{Einwilligung} wird die \hyperref[itm:05-1a]{Rechtmäßigkeit} der aufgrund der \hyperref
+    [itm:04-11]{Einwilligung} bis zum Widerruf erfolgten \hyperref[itm:04-2]{Verarbeitung} nicht berührt. Die \hyperref
+    [itm:04-1]{betroffene Person} wird vor Abgabe der \hyperref[itm:04-11]{Einwilligung} hiervon in Kenntnis gesetzt.
+    Der Widerruf der
    \hyperref[itm:04-11]{Einwilligung} muss so einfach wie die Erteilung der \hyperref[itm:04-11]{Einwilligung} sein.
   \label{itm:07-3}
 
