--- a/artikel/14.tex
+++ b/artikel/14.tex
@@ -68,8 +68,8 @@
 
     \item wenn die \hyperref[itm:04-2]{Verarbeitung} auf \hyperref[itm:06-1a]{Artikel 6 Absatz 1 Buchstabe a}
      oder \hyperref[itm:09-2a]{Artikel 9 Absatz 2 Buchstabe a} beruht, das Bestehen eines Rechts, die \hyperref
-     [itm:04-11]{Einwilligung} jederzeit zu widerrufen, ohne dass die Rechtmäßigkeit der aufgrund der \hyperref
-     [itm:04-11]{Einwilligung} bis zum Widerruf erfolgten \hyperref[itm:04-2]{Verarbeitung} berührt wird;
+     [itm:04-11]{Einwilligung} jederzeit zu widerrufen, ohne dass die \hyperref[itm:05-1a]{Rechtmäßigkeit} der aufgrund
+     der \hyperref[itm:04-11]{Einwilligung} bis zum Widerruf erfolgten \hyperref[itm:04-2]{Verarbeitung} berührt wird;
     \label{itm:14-2d}
 
     \item das Bestehen eines Beschwerderechts bei einer \hyperref[itm:04-21]{Aufsichtsbehörde};
