--- a/artikel/18.tex
+++ b/artikel/18.tex
@@ -13,9 +13,10 @@
 
   \begin{enumerate}
   
-    \item die Richtigkeit der \hyperref[itm:04-1]{personenbezogenen Daten} von der \hyperref[itm:04-1]
-     {betroffenen Person} bestritten wird, und zwar für eine Dauer, die es dem \hyperref[itm:04-7]
-     {Verantwortlichen} ermöglicht, die Richtigkeit der \hyperref[itm:04-1]{personenbezogenen Daten} zu überprüfen,
+    \item die \hyperref[itm:05-1d]{Richtigkeit} der \hyperref[itm:04-1]{personenbezogenen Daten} von der \hyperref
+     [itm:04-1]{betroffenen Person} bestritten wird, und zwar für eine Dauer, die es dem \hyperref[itm:04-7]
+     {Verantwortlichen} ermöglicht, die \hyperref[itm:05-1d]{Richtigkeit} der \hyperref[itm:04-1]
+     {personenbezogenen Daten} zu überprüfen,
     \label{itm:18-1a}
 
     \item die \hyperref[itm:04-2]{Verarbeitung} unrechtmäßig ist und die \hyperref[itm:04-1]{betroffene Person} die
