--- a/artikel/25.tex
+++ b/artikel/25.tex
@@ -14,9 +14,9 @@
     {Verarbeitung} als auch zum Zeitpunkt der eigentlichen
    \hyperref[itm:04-2]{Verarbeitung} geeignete technische und organisatorische Maßnahmen -- wie z. B. \hyperref
     [itm:04-5]{Pseudonymisierung} -- trifft, die dafür ausgelegt sind, die Datenschutzgrundsätze wie etwa
-    Datenminimierung wirksam umzusetzen und die notwendigen Garantien in die \hyperref[itm:04-2]
-    {Verarbeitung} aufzunehmen, um den Anforderungen dieser Verordnung zu genügen und die Rechte der \hyperref
-    [itm:04-1]{betroffenen Personen} zu schützen.
+    \hyperref[itm:05-1c]{Datenminimierung} wirksam umzusetzen und die notwendigen Garantien in die \hyperref[itm:04-2]
+     {Verarbeitung} aufzunehmen, um den Anforderungen dieser Verordnung zu genügen und die Rechte der \hyperref
+     [itm:04-1]{betroffenen Personen} zu schützen.
   \label{itm:25-1}
 
   \item Der \hyperref[itm:04-7]{Verantwortliche} trifft geeignete technische und organisatorische Maßnahmen, die
