--- a/artikel/32.tex
+++ b/artikel/32.tex
@@ -19,8 +19,9 @@
     \item die \hyperref[itm:04-5]{Pseudonymisierung} und Verschlüsselung \hyperref[itm:04-1]{personenbezogener Daten};
     \label{itm:32-1a}
 
-    \item die Fähigkeit, die Vertraulichkeit, Integrität, Verfügbarkeit und Belastbarkeit der Systeme und Dienste im
-     Zusammenhang mit der \hyperref[itm:04-2]{Verarbeitung} auf Dauer sicherzustellen;
+    \item die Fähigkeit, die \hyperref[itm:05-1f]{Vertraulichkeit}, \hyperref[itm:05-1f]{Integrität}, Verfügbarkeit und
+     Belastbarkeit der Systeme und Dienste im Zusammenhang mit der \hyperref[itm:04-2]{Verarbeitung} auf Dauer
+     sicherzustellen;
     \label{itm:32-1b}
 
     \item die Fähigkeit, die Verfügbarkeit der \hyperref[itm:04-1]{personenbezogenen Daten} und den Zugang zu ihnen bei
