--- a/artikel/47.tex
+++ b/artikel/47.tex
@@ -48,12 +48,12 @@
     \item interne und externe Rechtsverbindlichkeit der betreffenden internen Datenschutzvorschriften;
     \label{itm:47-2c}
 
-    \item die Anwendung der allgemeinen Datenschutzgrundsätze, insbesondere Zweckbindung, Datenminimierung, begrenzte
-     Speicherfristen, Datenqualität, Datenschutz durch Technikgestaltung und durch datenschutzfreundliche
-     Voreinstellungen, Rechtsgrundlage für die \hyperref[itm:04-2]{Verarbeitung}, \hyperref[itm:04-2]
-     {Verarbeitung} besonderer Kategorien von personenbezogenen Daten, Maßnahmen zur Sicherstellung der Datensicherheit
-     und Anforderungen für die Weiterübermittlung an nicht an diese internen Datenschutzvorschriften gebundene
-     Stellen;
+    \item die Anwendung der allgemeinen Datenschutzgrundsätze, insbesondere \hyperref[itm:05-1b]
+     {Zweckbindung}, \hyperref[itm:05-1c]{Datenminimierung}, begrenzte Speicherfristen, Datenqualität, Datenschutz
+     durch Technikgestaltung und durch datenschutzfreundliche Voreinstellungen, Rechtsgrundlage für die \hyperref
+     [itm:04-2]{Verarbeitung}, \hyperref[itm:04-2]{Verarbeitung} besonderer Kategorien von personenbezogenen Daten,
+     Maßnahmen zur Sicherstellung der Datensicherheit und Anforderungen für die Weiterübermittlung an nicht an diese
+     internen Datenschutzvorschriften gebundene Stellen;
     \label{itm:47-2d}
 
     \item die Rechte der \hyperref[itm:04-1]{betroffenen Personen} in Bezug auf die \hyperref[itm:04-2]
