Einarbeitung gesetzlicher Korrekturen

--- a/DSGVO-Bearbeitung.tex
+++ b/DSGVO-Bearbeitung.tex
@@ -1,5 +1,15 @@
 \input{support/preamble}
 
+% VERORDNUNG (EU) 2016/679 DES EUROPÄISCHEN PARLAMENTS UND DES RATES
+% vom 27. April 2016
+% zum Schutz natürlicher Personen bei der Verarbeitung personenbezogener Daten, zum freien Datenverkehr und zur Aufhebung der Richtlinie 95/46/EG (Datenschutz-Grundverordnung)
+% (Text von Bedeutung für den EWR)
+% (ABl. L 119 vom 4.5.2016, S. 1)
+% Berichtigt durch:
+% Berichtigung, ABl. L 314 vom 22.11.2016, S.  72 (2016/679)
+% Berichtigung, ABl. L 127 vom 23.5.2018, S.  2 (2016/679)
+% Berichtigung, ABl. L 074 vom 4.3.2021, S.  35 (2016/679)
+
 \begin{document}
 \frontmatter
 \tableofcontents
