--- a/artikel/04.tex
+++ b/artikel/04.tex
@@ -135,7 +135,7 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
     vertritt;
   \label{itm:04-17}
 
-  \item „Unternehmen“ eine natürliche und juristische Person, die eine wirtschaftliche Tätigkeit ausübt, unabhängig von
+  \item „Unternehmen“ eine natürliche oder juristische Person, die eine wirtschaftliche Tätigkeit ausübt, unabhängig von
    ihrer Rechtsform, einschließlich Personengesellschaften oder Vereinigungen, die regelmäßig einer wirtschaftlichen
    Tätigkeit nachgehen;
   \label{itm:04-18}
