--- a/artikel/15.tex
+++ b/artikel/15.tex
@@ -65,18 +65,11 @@
    nichts anderes angibt.
   \label{itm:15-3}
 
-  \item Das Recht auf Erhalt einer Kopie gemäß \sout{Absatz 1b} \hyperref[itm:15-3]{Absatz 3} darf die Rechte und
+  \item Das Recht auf Erhalt einer Kopie gemäß \hyperref[itm:15-3]{Absatz 3} darf die Rechte und
    Freiheiten anderer Personen nicht beeinträchtigen.
   \label{itm:15-4}
 
 \end{enumerate}
 
 \addsec{Eigene Notizen}
-
-\begin{itemize}
-
-  \item Der deutsche Originaltext verweist in \hyperref[itm:15-4]{Absatz 4} auf Absatz 1b, was inhaltlich nicht sinnvoll
-   ist. Der englische und französische Text verweisen beide auf Absatz 3, was im Text oben korrigiert wurde.
-
-\end{itemize}
 
