--- a/artikel/25.tex
+++ b/artikel/25.tex
@@ -13,14 +13,14 @@
     der \hyperref[itm:04-7]{Verantwortliche} sowohl zum Zeitpunkt der Festlegung der Mittel für die \hyperref[itm:04-2]
     {Verarbeitung} als auch zum Zeitpunkt der eigentlichen
    \hyperref[itm:04-2]{Verarbeitung} geeignete technische und organisatorische Maßnahmen -- wie z. B. \hyperref
-    [itm:04-5]{Pseudonymisierung} -- trifft, die dafür ausgelegt sind, die Datenschutzgrundsätze wie etwa
+    [itm:04-5]{Pseudonymisierung} --, die dafür ausgelegt sind, die Datenschutzgrundsätze wie etwa
     \hyperref[itm:05-1c]{Datenminimierung} wirksam umzusetzen und die notwendigen Garantien in die \hyperref[itm:04-2]
      {Verarbeitung} aufzunehmen, um den Anforderungen dieser Verordnung zu genügen und die Rechte der \hyperref
      [itm:04-1]{betroffenen Personen} zu schützen.
   \label{itm:25-1}
 
   \item Der \hyperref[itm:04-7]{Verantwortliche} trifft geeignete technische und organisatorische Maßnahmen, die
-   sicherstellen, dass durch Voreinstellung grundsätzlich nur \hyperref[itm:04-1]{personenbezogene Daten},
+   sicherstellen, dass durch Voreinstellung nur \hyperref[itm:04-1]{personenbezogene Daten},
    deren \hyperref[itm:04-2]{Verarbeitung} für den jeweiligen bestimmten Verarbeitungszweck erforderlich ist,
    verarbeitet werden. Diese Verpflichtung gilt für die Menge der erhobenen
    \hyperref[itm:04-1]{personenbezogenen Daten}, den Umfang ihrer \hyperref[itm:04-2]{Verarbeitung}, ihre Speicherfrist
