--- a/artikel/26.tex
+++ b/artikel/26.tex
@@ -1,5 +1,5 @@
 %!TEX root = ../DSGVO-Bearbeitung.tex
-\chapter{Gemeinsam für die Verarbeitung Verantwortliche}
+\chapter{Gemeinsam Verantwortliche}
 \label{ch:26}
 
 \addsec{Text der Verordnung}
