--- a/artikel/28.tex
+++ b/artikel/28.tex
@@ -56,36 +56,33 @@
 
     \item angesichts der Art der \hyperref[itm:04-2]{Verarbeitung} den \hyperref[itm:04-7]{Verantwortlichen} nach
      Möglichkeit mit geeigneten technischen und organisatorischen Maßnahmen dabei unterstützt, seiner Pflicht zur
-     Beantwortung von Anträgen auf Wahrnehmung der in
-     \hyperref[part:3]{Kapitel III} genannten Rechte der \hyperref[itm:04-1]{betroffenen Person} nachzukommen;
+     Beantwortung von Anträgen auf Wahrnehmung der in \hyperref[part:3]{Kapitel III} genannten Rechte der \hyperref
+     [itm:04-1]{betroffenen Person} nachzukommen;
     \label{itm:28-3-1e}
 
     \item unter Berücksichtigung der Art der \hyperref[itm:04-2]{Verarbeitung} und der ihm zur Verfügung stehenden
-     Informationen den
-     \hyperref[itm:04-7]{Verantwortlichen} bei der Einhaltung der in den Artikeln \hyperref[ch:32]{32} bis \hyperref
-      [ch:36]{36} genannten Pflichten unterstützt;
+     Informationen den \hyperref[itm:04-7]{Verantwortlichen} bei der Einhaltung der in den Artikeln \hyperref[ch:32]
+     {32} bis \hyperref[ch:36]{36} genannten Pflichten unterstützt;
     \label{itm:28-3-1f}
 
     \item nach Abschluss der Erbringung der Verarbeitungsleistungen alle \hyperref[itm:04-1]{personenbezogenen Daten}
-     nach Wahl des
-     \hyperref[itm:04-7]{Verantwortlichen} entweder löscht oder zurückgibt, sofern nicht nach dem Unionsrecht oder dem
-      Recht der Mitgliedstaaten eine Verpflichtung zur Speicherung der \hyperref[itm:04-1]{personenbezogenen Daten}
-      besteht;
+     nach Wahl des \hyperref[itm:04-7]{Verantwortlichen} entweder löscht oder zurückgibt und die vorhandenen Kopien
+     löscht, sofern nicht nach dem Unionsrecht oder dem Recht der Mitgliedstaaten eine Verpflichtung zur Speicherung
+     der \hyperref[itm:04-1]{personenbezogenen Daten} besteht;
     \label{itm:28-3-1g}
 
     \item dem \hyperref[itm:04-7]{Verantwortlichen} alle erforderlichen Informationen zum Nachweis der Einhaltung der in
      diesem Artikel niedergelegten Pflichten zur Verfügung stellt und Überprüfungen -- einschließlich Inspektionen –,
-     die vom
-     \hyperref[itm:04-7]{Verantwortlichen} oder einem anderen von diesem beauftragten Prüfer durchgeführt werden,
-      ermöglicht und dazu beiträgt.
+     die vom \hyperref[itm:04-7]{Verantwortlichen} oder einem anderen von diesem beauftragten Prüfer durchgeführt
+     werden, ermöglicht und dazu beiträgt.
     \label{itm:28-3-1h}
 
   \end{enumerate}
 
   \phantomsection Mit Blick auf \hyperref[itm:28-3-1h]{Unterabsatz 1 Buchstabe h} informiert der \hyperref[itm:04-8]
-   {Auftragsverarbeiter} den
-  \hyperref[itm:04-7]{Verantwortlichen} unverzüglich, falls er der Auffassung ist, dass eine Weisung gegen diese
-   Verordnung oder gegen andere Datenschutzbestimmungen der Union oder der Mitgliedstaaten verstößt.
+   {Auftragsverarbeiter} den \hyperref[itm:04-7]{Verantwortlichen} unverzüglich, falls er der Auffassung ist, dass eine
+   Weisung gegen diese Verordnung oder gegen andere Datenschutzbestimmungen der Union oder der Mitgliedstaaten
+   verstößt.
   \label{itm:28-3-2}
 
   \item Nimmt der \hyperref[itm:04-8]{Auftragsverarbeiter} die Dienste eines weiteren \hyperref[itm:04-8]
@@ -118,7 +115,7 @@
     [ch:42]{42} und \hyperref[ch:43]{43} erteilten Zertifizierung sind.
   \label{itm:28-6}
 
-  \item Die Kommission kann im Einklang mit dem Prüfverfahren gemäß \sout{Artikel 87} \hyperref[itm:93-2]{Artikel 93
+  \item Die Kommission kann im Einklang mit dem Prüfverfahren gemäß \hyperref[itm:93-2]{Artikel 93
    Absatz 2} Standardvertragsklauseln zur Regelung der in den Absätzen \hyperref[itm:28-3-1]{3} und \hyperref[itm:28-4]
    {4} des vorliegenden Artikels genannten Fragen festlegen.
   \label{itm:28-7}
@@ -141,12 +138,4 @@
 \end{enumerate}
 
 \addsec{Eigene Notizen}
-
-\begin{itemize}
-
-  \item Der deutsche Originaltext verweist in \hyperref[itm:28-7]{Absatz 7} auf Artikel 87 Absatz 2. Dieser Artikel hat
-   allerdings keine Absatzunterteilung. Der englische und französische Text verweisen beide auf Artikel 93, was im Text
-   oben korrigiert wurde.
-
-\end{itemize}
 
