--- a/artikel/34.tex
+++ b/artikel/34.tex
@@ -24,21 +24,21 @@
 
   \begin{enumerate}
   
-    \item der \hyperref[itm:04-7]{Verantwortliche} geeignete technische und organisatorische Sicherheitsvorkehrungen
-     getroffen hat und diese Vorkehrungen auf die von der Verletzung betroffenen \hyperref[itm:04-1]
-     {personenbezogenen Daten} angewandt wurden, insbesondere solche, durch die die \hyperref[itm:04-1]
+    \item der \hyperref[itm:04-7]{Verantwortliche} hat geeignete technische und organisatorische Sicherheitsvorkehrungen
+     getroffen hat und diese Vorkehrungen wurden auf die von der Verletzung betroffenen \hyperref[itm:04-1]
+     {personenbezogenen Daten} angewandt, insbesondere solche, durch die die \hyperref[itm:04-1]
      {personenbezogenen Daten} für alle Personen, die nicht zum Zugang zu den \hyperref[itm:04-1]
      {personenbezogenen Daten} befugt sind, unzugänglich gemacht werden, etwa durch Verschlüsselung;
     \label{itm:34-3a}
 
-    \item der \hyperref[itm:04-7]{Verantwortliche} durch nachfolgende Maßnahmen sichergestellt hat, dass das hohe Risiko
-     für die Rechte und Freiheiten der \hyperref[itm:04-1]{betroffenen Personen} gemäß \hyperref[itm:34-1]{Absatz 1}
-     aller Wahrscheinlichkeit nach nicht mehr besteht;
+    \item der \hyperref[itm:04-7]{Verantwortliche} hat durch nachfolgende Maßnahmen sichergestellt hat, dass das hohe
+     Risiko für die Rechte und Freiheiten der \hyperref[itm:04-1]{betroffenen Personen} gemäß \hyperref[itm:34-1]
+     {Absatz 1} aller Wahrscheinlichkeit nach nicht mehr besteht;
     \label{itm:34-3b}
 
-    \item dies mit einem unverhältnismäßigen Aufwand verbunden wäre. In diesem Fall hat stattdessen eine öffentliche
-     Bekanntmachung oder eine ähnliche Maßnahme zu erfolgen, durch die die \hyperref[itm:04-1]{betroffenen Personen}
-     vergleichbar wirksam informiert werden.
+    \item die Benachrichtigung wäre mit einem unverhältnismäßigen Aufwand verbunden. In diesem Fall hat stattdessen eine
+     öffentliche Bekanntmachung oder eine ähnliche Maßnahme zu erfolgen, durch die die \hyperref[itm:04-1]
+     {betroffenen Personen} vergleichbar wirksam informiert werden.
     \label{itm:34-3c}
 
   \end{enumerate}
