--- a/artikel/37.tex
+++ b/artikel/37.tex
@@ -13,7 +13,7 @@
   \begin{enumerate}
   
     \item die \hyperref[itm:04-2]{Verarbeitung} von einer Behörde oder öffentlichen Stelle durchgeführt wird, mit
-     Ausnahme von Gerichten, die im Rahmen ihrer justiziellen Tätigkeit handeln,
+     Ausnahme von Gerichten, soweit sie im Rahmen ihrer justiziellen Tätigkeit handeln,
     \label{itm:37-1a}
 
     \item die Kerntätigkeit des \hyperref[itm:04-7]{Verantwortlichen} oder des \hyperref[itm:04-8]
