--- a/artikel/40.tex
+++ b/artikel/40.tex
@@ -65,15 +65,14 @@
   \item Zusätzlich zur Einhaltung durch die unter diese Verordnung fallenden \hyperref[itm:04-7]
    {Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeiter} können Verhaltensregeln, die gemäß \hyperref
    [itm:40-5]{Absatz 5 des vorliegenden Artikels} genehmigt wurden und gemäß \hyperref[itm:40-9]{Absatz 9 des
-   vorliegenden Artikels} allgemeine Gültigkeit besitzen, können auch von
-   \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeitern}, die gemäß \hyperref[ch:3]
-    {Artikel 3} nicht unter diese Verordnung fallen, eingehalten werden, um geeignete Garantien im Rahmen der
-    Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an Drittländer oder \hyperref[itm:04-29]
-    {internationale Organisationen} nach Maßgabe des \hyperref[itm:46-2e]{Artikels 46 Absatz 2 Buchstabe e} zu bieten.
-    Diese \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeiter} gehen mittels
-    vertraglicher oder sonstiger rechtlich bindender Instrumente die verbindliche und durchsetzbare Verpflichtung ein,
-    die geeigneten Garantien anzuwenden, auch im Hinblick auf die Rechte der \hyperref[itm:04-1]
-    {betroffenen Personen}.
+   vorliegenden Artikels} allgemeine Gültigkeit besitzen, auch von \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref
+   [itm:04-8]{Auftragsverarbeitern}, die gemäß \hyperref[ch:3]{Artikel 3} nicht unter diese Verordnung fallen,
+   eingehalten werden, um geeignete Garantien im Rahmen der Übermittlung \hyperref[itm:04-1]{personenbezogener Daten}
+   an Drittländer oder \hyperref[itm:04-29]{internationale Organisationen} nach Maßgabe des \hyperref[itm:46-2e]
+   {Artikels 46 Absatz 2 Buchstabe e} zu bieten. Diese \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref[itm:04-8]
+   {Auftragsverarbeiter} gehen mittels vertraglicher oder sonstiger rechtlich bindender Instrumente die verbindliche
+   und durchsetzbare Verpflichtung ein, die geeigneten Garantien anzuwenden, auch im Hinblick auf die Rechte
+   der \hyperref[itm:04-1]{betroffenen Personen}.
   \label{itm:40-3}
 
   \item Die Verhaltensregeln gemäß \hyperref[itm:40-2]{Absatz 2 des vorliegenden Artikels} müssen Verfahren vorsehen,
