--- a/artikel/41.tex
+++ b/artikel/41.tex
@@ -42,22 +42,22 @@
 
   \end{enumerate}
 
-  \item Die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} übermittelt den Entwurf der Kriterien für die
-   Akkreditierung einer Stelle nach
-   \hyperref[itm:41-1]{Absatz 1} gemäß dem Kohärenzverfahren nach \hyperref[ch:63]{Artikel 63} an den Ausschuss.
+  \item Die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} übermittelt den Entwurf der Anforderungen an die
+   Akkreditierung einer Stelle nach \hyperref[itm:41-1]{Absatz 1} gemäß dem Kohärenzverfahren nach \hyperref[ch:63]
+   {Artikel 63} an den Ausschuss.
   \label{itm:41-3}
 
   \item Unbeschadet der Aufgaben und Befugnisse der zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} und der
    Bestimmungen des \hyperref[part:8]{Kapitels VIII} ergreift eine Stelle gemäß \hyperref[itm:41-1]{Absatz 1}
    vorbehaltlich geeigneter Garantien im Falle einer Verletzung der Verhaltensregeln durch einen \hyperref[itm:04-7]
    {Verantwortlichen} oder einen \hyperref[itm:04-8]{Auftragsverarbeiter} geeignete Maßnahmen, einschließlich eines
-   vorläufigen oder endgültigen Ausschlusses des \hyperref[itm:04-7]{Verantwortlichen} oder
-   \hyperref[itm:04-8]{Auftragsverarbeiters} von den Verhaltensregeln. Sie unterrichtet die zuständige \hyperref
-    [itm:04-21]{Aufsichtsbehörde} über solche Maßnahmen und deren Begründung.
+   vorläufigen oder endgültigen Ausschlusses des \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref[itm:04-8]
+   {Auftragsverarbeiters} von den Verhaltensregeln. Sie unterrichtet die zuständige \hyperref[itm:04-21]
+   {Aufsichtsbehörde} über solche Maßnahmen und deren Begründung.
   \label{itm:41-4}
 
   \item Die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} widerruft die Akkreditierung einer Stelle gemäß \hyperref
-   [itm:41-1]{Absatz 1}, wenn die Voraussetzungen für ihre Akkreditierung nicht oder nicht mehr erfüllt sind oder wenn
+   [itm:41-1]{Absatz 1}, wenn die Anforderungen an ihre Akkreditierung nicht oder nicht mehr erfüllt sind oder wenn
    die Stelle Maßnahmen ergreift, die nicht mit dieser Verordnung vereinbar sind.
   \label{itm:41-5}
 
