--- a/artikel/42.tex
+++ b/artikel/42.tex
@@ -56,9 +56,9 @@
 
   \item Die Zertifizierung wird einem \hyperref[itm:04-7]{Verantwortlichen} oder einem \hyperref[itm:04-8]
    {Auftragsverarbeiter} für eine Höchstdauer von drei Jahren erteilt und kann unter denselben Bedingungen verlängert
-   werden, sofern die einschlägigen Voraussetzungen weiterhin erfüllt werden. Die Zertifizierung wird gegebenenfalls
+   werden, sofern die einschlägigen Kriterien weiterhin erfüllt werden. Die Zertifizierung wird gegebenenfalls
    durch die Zertifizierungsstellen nach \hyperref[ch:43]{Artikel 43} oder durch die zuständige \hyperref[itm:04-21]
-   {Aufsichtsbehörde} widerrufen, wenn die Voraussetzungen für die Zertifizierung nicht oder nicht mehr erfüllt
+   {Aufsichtsbehörde} widerrufen, wenn die Kriterien für die Zertifizierung nicht oder nicht mehr erfüllt
    werden.
   \label{itm:42-7}
 
