--- a/artikel/43.tex
+++ b/artikel/43.tex
@@ -60,7 +60,7 @@
   \end{enumerate}
 
   \item Die Akkreditierung von Zertifizierungsstellen nach den Absätzen \hyperref[itm:43-1]{1} und \hyperref[itm:43-2]
-   {2} erfolgt anhand der Kriterien, die von der gemäß Artikel \hyperref[ch:55]{55} oder \hyperref[ch:56]
+   {2} erfolgt anhand der Anforderungen, die von der gemäß Artikel \hyperref[ch:55]{55} oder \hyperref[ch:56]
    {56} zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} oder -- gemäß \hyperref[ch:63]{Artikel 63} -- von dem
    Ausschuss genehmigt wurden. Im Fall einer Akkreditierung nach \hyperref[itm:43-1b]{Absatz 1 Buchstabe b des
    vorliegenden Artikels} ergänzen diese Anforderungen diejenigen, die in der Verordnung (EG) Nr. 765/2008\todo
@@ -83,9 +83,7 @@
   \item Die Anforderungen nach \hyperref[itm:43-3]{Absatz 3 des vorliegenden Artikels} und die Kriterien nach A\hyperref
    [itm:42-5]{rtikel 42 Absatz 5} werden von der \hyperref[itm:04-21]{Aufsichtsbehörde} in leicht zugänglicher Form
    veröffentlicht. Die
-   \hyperref[itm:04-21]{Aufsichtsbehörden} übermitteln diese Anforderungen und Kriterien auch dem Ausschuss. Der
-    Ausschuss nimmt alle Zertifizierungsverfahren und Datenschutzsiegel in ein Register auf und veröffentlicht sie in
-    geeigneter Weise.
+   \hyperref[itm:04-21]{Aufsichtsbehörden} übermitteln diese Anforderungen und Kriterien auch dem Ausschuss. 
   \label{itm:43-6}
 
   \item Unbeschadet des \hyperref[part:8]{Kapitels VIII} widerruft die zuständige \hyperref[itm:04-21]
