--- a/artikel/57.tex
+++ b/artikel/57.tex
@@ -81,7 +81,7 @@
      überprüfen;
     \label{itm:57-1o}
 
-    \item die Kriterien für die Akkreditierung einer Stelle für die Überwachung der Einhaltung der Verhaltensregeln
+    \item die Anforderungen für die Akkreditierung einer Stelle für die Überwachung der Einhaltung der Verhaltensregeln
      gemäß \hyperref[ch:41]{Artikel 41} und einer Zertifizierungsstelle gemäß \hyperref[ch:43]{Artikel 43} abfassen und
      veröffentlichen;
     \label{itm:57-1p}
