--- a/artikel/58.tex
+++ b/artikel/58.tex
@@ -33,7 +33,7 @@
      sind, zu erhalten,
     \label{itm:58-1e}
 
-    \item gemäß dem Verfahrensrecht der Union oder dem Verfahrensrecht des Mitgliedstaats Zugang zu den Geschäftsräumen,
+    \item gemäß dem Verfahrensrecht der Union oder dem Verfahrensrecht des Mitgliedstaats Zugang zu den Räumlichkeiten,
      einschließlich aller Datenverarbeitungsanlagen und -geräte, des \hyperref[itm:04-7]{Verantwortlichen} und
      des \hyperref[itm:04-8]{Auftragsverarbeiters} zu erhalten.
     \label{itm:58-1f}
@@ -65,7 +65,7 @@
     \label{itm:58-2d}
 
     \item den \hyperref[itm:04-7]{Verantwortlichen} anzuweisen, die von einer \hyperref[itm:04-12]{Verletzung des
-     Schutzes personenbezogener Daten} \hyperref[itm:04-1]{betroffenen Person} entsprechend zu benachrichtigen,
+     Schutzes personenbezogener Daten} \hyperref[itm:04-1]{betroffene Person} entsprechend zu benachrichtigen,
     \label{itm:58-2e}
 
     \item eine vorübergehende oder endgültige Beschränkung der \hyperref[itm:04-2]{Verarbeitung}, einschließlich eines
