--- a/artikel/64.tex
+++ b/artikel/64.tex
@@ -1,5 +1,5 @@
 %!TEX root = ../DSGVO-Bearbeitung.tex
-\chapter{Stellungnahme Ausschusses}
+\chapter{Stellungnahme des Ausschusses}
 \label{ch:64}
 
 \addsec{Text der Verordnung}
@@ -22,8 +22,9 @@
      steht,
     \label{itm:64-1b}
 
-    \item der Billigung der Kriterien für die Akkreditierung einer Stelle nach \hyperref[itm:41-3]{Artikel 41 Absatz 3}
-     oder einer Zertifizierungsstelle nach \hyperref[itm:43-3]{Artikel 43 Absatz 3} dient,
+    \item der Billigung der Anforderungen für die Akkreditierung einer Stelle nach \hyperref[itm:41-3]{Artikel 41 Absatz
+     3}, einer Zertifizierungsstelle nach \hyperref[itm:43-3]{Artikel 43 Absatz 3} oder der Kriterien für die
+     Zertifizierung gemäß \hyperref[itm:42-5]{Artikel 42 Absatz 5} dient,
     \label{itm:64-1c}
 
     \item der Festlegung von Standard-Datenschutzklauseln gemäß \hyperref[itm:46-2d]{Artikel 46 Absatz 2 Buchstabe d}
@@ -78,8 +79,9 @@
 
   \end{enumerate}
 
-  \item Die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} nimmt den in \hyperref[itm:64-1]{Absatz 1} genannten
-   Beschlussentwurf nicht vor Ablauf der in \hyperref[itm:64-3]{Absatz 3} genannten Frist an.
+  \item Die in \hyperref[itm:64-1]{Absatz 1} genannte zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} nimmt den in
+   \hyperref[itm:64-1]{Absatz 1} genannten Beschlussentwurf nicht vor Ablauf der in \hyperref[itm:64-3]{Absatz 3}
+    genannten Frist an.
   \label{itm:64-6}
 
   \item Die in \hyperref[itm:64-1]{Absatz 1} genannte \hyperref[itm:04-21]{Aufsichtsbehörde} trägt der Stellungnahme des
@@ -88,10 +90,10 @@
    oder ändern wird; gegebenenfalls übermittelt sie den geänderten Beschlussentwurf.
   \label{itm:64-7}
 
-  \item Teilt die \hyperref[itm:04-22]{betroffene Aufsichtsbehörde} dem Vorsitz des Ausschusses innerhalb der Frist
-   nach \hyperref[itm:64-7]{Absatz 7} des vorliegenden Artikels unter Angabe der maßgeblichen Gründe mit, dass sie
-   beabsichtigt, der Stellungnahme des Ausschusses insgesamt oder teilweise nicht zu folgen, so gilt \hyperref
-   [itm:65-2]{Artikel 65 Absatz 1}.
+  \item Teilt in \hyperref[itm:64-1]{Absatz 1} genannte die zuständige Aufsichtsbehörde dem Vorsitz des Ausschusses
+   innerhalb der Frist nach \hyperref[itm:64-7]{Absatz 7} des vorliegenden Artikels unter Angabe der maßgeblichen
+   Gründe mit, dass sie beabsichtigt, der Stellungnahme des Ausschusses insgesamt oder teilweise nicht zu folgen, so
+   gilt \hyperref[itm:65-2]{Artikel 65 Absatz 1}.
   \label{itm:64-8}
 
 \end{enumerate}
