--- a/artikel/65.tex
+++ b/artikel/65.tex
@@ -13,17 +13,15 @@
   \begin{enumerate}
   
     \item wenn eine \hyperref[itm:04-22]{betroffene Aufsichtsbehörde} in einem Fall nach \hyperref[itm:60-4]{Artikel 60
-     Absatz 4} einen
-     \hyperref[itm:04-27]{maßgeblichen und begründeten Einspruch} gegen einen Beschlussentwurf der federführenden
-      Behörde eingelegt hat oder die federführende Behörde einen solchen Einspruch als nicht maßgeblich oder nicht
-      begründet abgelehnt hat. Der verbindliche Beschluss betrifft alle Angelegenheiten, die Gegenstand des \hyperref
-      [itm:04-27]{maßgeblichen und begründeten Einspruch}s sind, insbesondere die Frage, ob ein Verstoß gegen diese
-      Verordnung vorliegt;
+     Absatz 4} einen \hyperref[itm:04-27]{maßgeblichen und begründeten Einspruch} gegen einen Beschlussentwurf der
+     federführenden Behörde eingelegt hat und sich die federführende Aufsichtsbehörde dem Einspruch nicht angeschlossen
+     hat oder den Einspruch als nicht maßgeblich oder nicht begründet abgelehnt hat. Der verbindliche Beschluss
+     betrifft alle Angelegenheiten, die Gegenstand des \hyperref[itm:04-27]{maßgeblichen und begründeten Einspruch}s
+     sind, insbesondere die Frage, ob ein Verstoß gegen diese Verordnung vorliegt;
     \label{itm:65-1a}
 
     \item wenn es widersprüchliche Standpunkte dazu gibt, welche der \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden}
-     für die
-     \hyperref[itm:04-16]{Hauptniederlassung} zuständig ist,
+     für die \hyperref[itm:04-16]{Hauptniederlassung} zuständig ist,
     \label{itm:65-1b}
 
     \item wenn eine zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} in den in \hyperref[itm:64-1]{Artikel 64 Absatz 1}
