--- a/artikel/69.tex
+++ b/artikel/69.tex
@@ -10,9 +10,9 @@
    \hyperref[ch:70]{70} und \hyperref[ch:71]{71} unabhängig.
   \label{itm:69-1}
 
-  \item Unbeschadet der Ersuchen der Kommission gemäß \hyperref[itm:70-1b]{Artikel 70 Absatz 1 Buchstabe b} und
-  \hyperref[itm:70-2]{Absatz 2} ersucht der Ausschuss bei der Erfüllung seiner Aufgaben oder in Ausübung seiner
-   Befugnisse weder um Weisung noch nimmt er Weisungen entgegen.
+  \item Unbeschadet der Ersuchen der Kommission gemäß Artikel 70 Absätze \hyperref[itm:70-1]{1} und \hyperref[itm:70-2]
+   {2} ersucht der Ausschuss bei der Erfüllung seiner Aufgaben oder in Ausübung seiner Befugnisse weder um Weisung noch
+   nimmt er Weisungen entgegen.
   \label{itm:69-2}
 
 \end{enumerate}
