--- a/artikel/70.tex
+++ b/artikel/70.tex
@@ -75,8 +75,7 @@
      [itm:58-3]{3} und die Festsetzung von Geldbußen gemäß \hyperref[ch:83]{Artikel 83};
     \label{itm:70-1k}
 
-    \item Überprüfung der praktischen Anwendung der unter den Buchstaben \hyperref[itm:70-1e]{e} und \hyperref
-     [itm:70-1f]{f} genannten Leitlinien, Empfehlungen und bewährten Verfahren;
+    \item Überprüfung der praktischen Anwendung der Leitlinien, Empfehlungen und bewährten Verfahren;
     \label{itm:70-1l}
 
     \item Bereitstellung von Leitlinien, Empfehlungen und bewährten Verfahren gemäß \hyperref[itm:70-1e]{Buchstabe e des
@@ -89,14 +88,15 @@
      \hyperref[ch:42]{42};
     \label{itm:70-1n}
 
-    \item Akkreditierung von Zertifizierungsstellen und deren regelmäßige Überprüfung gemäß \hyperref[ch:43]{Artikel 43}
-     und Führung eines öffentlichen Registers der akkreditierten Einrichtungen gemäß \hyperref[itm:43-6]{Artikel 43
-     Absatz 6} und der in Drittländern niedergelassenen akkreditierten \hyperref[itm:04-7]
-     {Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeiter} gemäß \hyperref[itm:42-7]{Artikel 42 Absatz 7};
+    \item Genehmigung von Zertifizierungsstellen und deren regelmäßige Überprüfung gemäß \hyperref[itm:42-5]{Artikel 42
+     Absatz 5} und Führung eines öffentlichen Registers der Zertifizierungsverfahren sowie von Datenschutzsiegeln und
+     -prüfzeichen gemäß \hyperref[itm:42-8]{Artikel 42 Absatz 8} und der in Drittländern niedergelassenen
+      niedergelassenen zertifizierten \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref[itm:04-8]
+      {Auftragsverarbeiter} gemäß \hyperref[itm:42-7]{Artikel 42 Absatz 7};
     \label{itm:70-1o}
 
-    \item Präzisierung der in \hyperref[itm:43-3]{Artikel 43 Absatz 3} genannten Anforderungen im Hinblick auf die
-     Akkreditierung von Zertifizierungsstellen gemäß \hyperref[ch:42]{Artikel 42};
+    \item Genehmigung der in \hyperref[itm:43-3]{Artikel 43 Absatz 3} genannten Anforderungen im Hinblick auf die
+     Akkreditierung von Zertifizierungsstellen gemäß \hyperref[ch:43]{Artikel 43};
     \label{itm:70-1p}
 
     \item Abgabe einer Stellungnahme für die Kommission zu den Zertifizierungsanforderungen gemäß \hyperref[itm:43-8]
