--- a/artikel/83.tex
+++ b/artikel/83.tex
@@ -7,13 +7,13 @@
 \begin{enumerate}
 
   \item Jede \hyperref[itm:04-21]{Aufsichtsbehörde} stellt sicher, dass die Verhängung von Geldbußen gemäß diesem
-   Artikel für Verstöße gegen diese Verordnung gemäß den Absätzen \hyperref[itm:83-5]{5} und \hyperref[itm:83-6]{6} in
-   jedem Einzelfall wirksam, verhältnismäßig und abschreckend ist.
+   Artikel für Verstöße gegen diese Verordnung gemäß den Absätzen \hyperref[itm:83-4]{4}, \hyperref[itm:83-5]{5} und
+   \hyperref[itm:83-6]{6} in jedem Einzelfall wirksam, verhältnismäßig und abschreckend ist.
   \label{itm:83-1}
 
   \item Geldbußen werden je nach den Umständen des Einzelfalls zusätzlich zu oder anstelle von Maßnahmen nach \hyperref
    [itm:58-2]{Artikel 58 Absatz 2} Buchstaben \hyperref[itm:58-2a]{a} bis \hyperref[itm:58-2h]{h} und \hyperref
-   [itm:58-2i]{i} verhängt. Bei der Entscheidung über die Verhängung einer Geldbuße und über deren Betrag wird in jedem
+   [itm:58-2j]{j} verhängt. Bei der Entscheidung über die Verhängung einer Geldbuße und über deren Betrag wird in jedem
    Einzelfall Folgendes gebührend berücksichtigt:
   \label{itm:83-2}
 
