--- a/artikel/30.tex
+++ b/artikel/30.tex
@@ -47,7 +47,7 @@
 
   \item Jeder \hyperref[itm:04-8]{Auftragsverarbeiter} und gegebenenfalls sein \hyperref[itm:04-17]{Vertreter} führen
    ein Verzeichnis zu allen Kategorien von im Auftrag eines \hyperref[itm:04-7]{Verantwortlichen} durchgeführten
-   Tätigkeiten der \hyperref[itm:04-2]{Verarbeitung}, die Folgendes enthält:
+   Tätigkeiten der \hyperref[itm:04-2]{Verarbeitung}, das Folgendes enthält:
   \label{itm:30-2}
 
   \begin{enumerate}
@@ -87,13 +87,14 @@
   \label{itm:30-4}
 
   \item Die in den Absätzen \hyperref[itm:30-1]{1} und \hyperref[itm:30-2]{2} genannten Pflichten gelten nicht für
-   \hyperref[itm:04-18]{Unternehmen} oder Einrichtungen, die weniger als 250 Mitarbeiter beschäftigen, sofern die von
-    ihnen vorgenommene
-   \hyperref[itm:04-2]{Verarbeitung} nicht ein Risiko für die Rechte und Freiheiten der \hyperref[itm:04-1]
-    {betroffenen Personen} birgt, die \hyperref[itm:04-2]{Verarbeitung} nicht nur gelegentlich erfolgt oder nicht
-    die \hyperref[itm:04-2]{Verarbeitung} besonderer Datenkategorien gemäß \hyperref[itm:09-1]{Artikel 9 Absatz 1} bzw.
-    die  \hyperref[itm:04-2]{Verarbeitung} von \hyperref[itm:04-1]{personenbezogenen Daten} über strafrechtliche
-    Verurteilungen und Straftaten im Sinne des \hyperref[ch:10]{Artikels 10} einschließt.
+   \hyperref[itm:04-18]{Unternehmen} oder Einrichtungen, die weniger als 250 Mitarbeiter beschäftigen, es sei denn, die
+    von ihnen vorgenommene \hyperref[itm:04-2]{Verarbeitung} birgt ein Risiko für die Rechte und Freiheiten
+    der \hyperref[itm:04-1]{betroffenen Personen}, die \hyperref[itm:04-2]{Verarbeitung} erfolgt nicht nur gelegentlich
+    oder es erfolgt eine \hyperref[itm:04-2]{Verarbeitung} besonderer Datenkategorien gemäß \hyperref[itm:09-1]
+    {Artikel 9 Absatz 1} bzw. die \hyperref[itm:04-2]{Verarbeitung} von \hyperref[itm:04-1]{personenbezogenen Daten}
+    über strafrechtliche Verurteilungen und Straftaten im Sinne des \hyperref[ch:10]{Artikels 10}.
+
+
   \label{itm:30-5}
 
 \end{enumerate}
