--- a/artikel/33.tex
+++ b/artikel/33.tex
@@ -8,11 +8,10 @@
 
   \item Im Falle einer \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} meldet der \hyperref
    [itm:04-7]{Verantwortliche} unverzüglich und möglichst binnen 72 Stunden, nachdem ihm die Verletzung bekannt wurde,
-   diese der gemäß Artikel 51 zuständigen
-   \hyperref[itm:04-21]{Aufsichtsbehörde}, es sei denn, dass die \hyperref[itm:04-12]{Verletzung des Schutzes
-    personenbezogener Daten} voraussichtlich nicht zu einem Risiko für die Rechte und Freiheiten natürlicher Personen
-    führt. Erfolgt die Meldung an die \hyperref[itm:04-21]{Aufsichtsbehörde} nicht binnen 72 Stunden, so ist ihr eine
-    Begründung für die Verzögerung beizufügen.
+   diese der gemäß \hyperref[ch:55]{Artikel 55} zuständigen\hyperref[itm:04-21]{Aufsichtsbehörde}, es sei denn, dass
+   die \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} voraussichtlich nicht zu einem Risiko für
+   die Rechte und Freiheiten natürlicher Personen führt. Erfolgt die Meldung an die \hyperref[itm:04-21]
+   {Aufsichtsbehörde} nicht binnen 72 Stunden, so ist ihr eine Begründung für die Verzögerung beizufügen.
   \label{itm:33-1}
 
   \item Wenn dem \hyperref[itm:04-8]{Auftragsverarbeiter} eine \hyperref[itm:04-12]{Verletzung des Schutzes
@@ -52,7 +51,7 @@
 
   \item Der \hyperref[itm:04-7]{Verantwortliche} dokumentiert \hyperref[itm:04-12]{Verletzungen des Schutzes
    personenbezogener Daten} einschließlich aller im Zusammenhang mit der \hyperref[itm:04-12]{Verletzung des Schutzes
-   personenbezogener Daten} stehenden Fakten, von deren Auswirkungen und der ergriffenen Abhilfemaßnahmen. Diese
+   personenbezogener Daten} stehenden Fakten, ihrer Auswirkungen und der ergriffenen Abhilfemaßnahmen. Diese
    Dokumentation muss der \hyperref[itm:04-21]{Aufsichtsbehörde} die Überprüfung der Einhaltung der Bestimmungen dieses
    Artikels ermöglichen.
   \label{itm:33-5}
