--- a/artikel/44.tex
+++ b/artikel/44.tex
@@ -9,7 +9,7 @@ Jedwede Übermittlung \hyperref[itm:04-1]{personenbezogener Daten}, die bereits 
 ist nur zulässig, wenn der \hyperref[itm:04-7]{Verantwortliche} und der \hyperref[itm:04-8]{Auftragsverarbeiter} die
 in \hyperref[part:5]{diesem Kapitel} niedergelegten Bedingungen einhalten und auch die sonstigen Bestimmungen dieser
 Verordnung eingehalten werden; dies gilt auch für die etwaige Weiterübermittlung
-\hyperref[itm:04-1]{personenbezogener Daten} durch das betreffende Drittland oder die betreffende \hyperref[itm:04-29]
+\hyperref[itm:04-1]{personenbezogener Daten} aus dem betreffenden Drittland oder der betreffenden \hyperref[itm:04-29]
  {internationale Organisation} an ein anderes Drittland oder eine andere \hyperref[itm:04-29]
  {internationale Organisation}. Alle Bestimmungen dieses Kapitels sind anzuwenden, um sicherzustellen, dass das durch
  diese Verordnung gewährleistete Schutzniveau für natürliche Personen nicht untergraben wird.
