--- a/artikel/77.tex
+++ b/artikel/77.tex
@@ -8,9 +8,9 @@
 
   \item Jede \hyperref[itm:04-1]{betroffene Person} hat unbeschadet eines anderweitigen verwaltungsrechtlichen oder
    gerichtlichen Rechtsbehelfs das Recht auf Beschwerde bei einer \hyperref[itm:04-21]{Aufsichtsbehörde}, insbesondere
-   in dem Mitgliedstaat ihres Aufenthaltsorts, ihres Arbeitsplatzes oder des Orts des mutmaßlichen Verstoßes, wenn
-   die \hyperref[itm:04-1]{betroffene Person} der Ansicht ist, dass die \hyperref[itm:04-2]{Verarbeitung} der sie
-   betreffenden \hyperref[itm:04-1]{personenbezogenen Daten} gegen diese Verordnung verstößt.
+   in dem Mitgliedstaat ihres gewöhnlichen Aufenthaltsorts, ihres Arbeitsplatzes oder des Orts des mutmaßlichen
+   Verstoßes, wenn die \hyperref[itm:04-1]{betroffene Person} der Ansicht ist, dass die \hyperref[itm:04-2]
+   {Verarbeitung} der sie betreffenden \hyperref[itm:04-1]{personenbezogenen Daten} gegen diese Verordnung verstößt.
   \label{itm:77-1}
 
   \item Die \hyperref[itm:04-21]{Aufsichtsbehörde}, bei der die Beschwerde eingereicht wurde, unterrichtet den
