--- a/artikel/79.tex
+++ b/artikel/79.tex
@@ -18,9 +18,9 @@
    {Auftragsverarbeiter} sind die Gerichte des Mitgliedstaats zuständig, in dem der \hyperref[itm:04-7]
    {Verantwortliche} oder der \hyperref[itm:04-8]{Auftragsverarbeiter} eine Niederlassung hat. Wahlweise können solche
    Klagen auch bei den Gerichten des Mitgliedstaats erhoben werden, in dem die \hyperref[itm:04-1]{betroffene Person}
-   ihren Aufenthaltsort hat, es sei denn, es handelt sich bei dem \hyperref[itm:04-7]{Verantwortlichen} oder
-   dem \hyperref[itm:04-8]{Auftragsverarbeiter} um eine Behörde eines Mitgliedstaats, die in Ausübung ihrer
-   hoheitlichen Befugnisse tätig geworden ist.
+   ihren gewöhnlichen Aufenthaltsort hat, es sei denn, es handelt sich bei dem \hyperref[itm:04-7]
+   {Verantwortlichen} oder dem \hyperref[itm:04-8]{Auftragsverarbeiter} um eine Behörde eines Mitgliedstaats, die in
+   Ausübung ihrer hoheitlichen Befugnisse tätig geworden ist.
   \label{itm:79-2}
 
 \end{enumerate}
