--- a/artikel/88.tex
+++ b/artikel/88.tex
@@ -8,21 +8,19 @@
 
   \item Die Mitgliedstaaten können durch Rechtsvorschriften oder durch Kollektivvereinbarungen spezifischere
    Vorschriften zur Gewährleistung des Schutzes der Rechte und Freiheiten hinsichtlich der \hyperref[itm:04-2]
-   {Verarbeitung}
-   \hyperref[itm:04-1]{personenbezogener Beschäftigtendaten} im Beschäftigungskontext, insbesondere für Zwecke der
-    Einstellung, der Erfüllung des Arbeitsvertrags einschließlich der Erfüllung von durch Rechtsvorschriften oder durch
-    Kollektivvereinbarungen festgelegten Pflichten, des Managements, der Planung und der Organisation der Arbeit, der
-    Gleichheit und Diversität am Arbeitsplatz, der Gesundheit und Sicherheit am Arbeitsplatz, des Schutzes des
-    Eigentums der Arbeitgeber oder der Kunden sowie für Zwecke der Inanspruchnahme der mit der Beschäftigung
-    zusammenhängenden individuellen oder kollektiven Rechte und Leistungen und für Zwecke der Beendigung des
-    Beschäftigungsverhältnisses vorsehen.
+   {Verarbeitung} \hyperref[itm:04-1]{personenbezogener Beschäftigtendaten} im Beschäftigungskontext, insbesondere für
+   Zwecke der Einstellung, der Erfüllung des Arbeitsvertrags einschließlich der Erfüllung von durch Rechtsvorschriften
+   oder durch Kollektivvereinbarungen festgelegten Pflichten, des Managements, der Planung und der Organisation der
+   Arbeit, der Gleichheit und Diversität am Arbeitsplatz, der Gesundheit und Sicherheit am Arbeitsplatz, des Schutzes
+   des Eigentums der Arbeitgeber oder der Kunden sowie für Zwecke der Inanspruchnahme der mit der Beschäftigung
+   zusammenhängenden individuellen oder kollektiven Rechte und Leistungen und für Zwecke der Beendigung des
+   Beschäftigungsverhältnisses vorsehen.
   \label{itm:88-1}
 
-  \item Diese Vorschriften umfassen angemessene und besondere Maßnahmen zur Wahrung der menschlichen Würde, der
+  \item Diese Vorschriften umfassen geeignete und besondere Maßnahmen zur Wahrung der menschlichen Würde, der
    berechtigten Interessen und der Grundrechte der \hyperref[itm:04-1]{betroffenen Person}, insbesondere im Hinblick
-   auf die \hyperref[itm:05-1a]{Transparenz} der
-   \hyperref[itm:04-2]{Verarbeitung}, die Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} innerhalb
-    einer \hyperref[itm:04-19]{Unternehmensgruppe} oder einer Gruppe von
+   auf die \hyperref[itm:05-1a]{Transparenz} der \hyperref[itm:04-2]{Verarbeitung}, die Übermittlung \hyperref
+   [itm:04-1]{personenbezogener Daten} innerhalb einer \hyperref[itm:04-19]{Unternehmensgruppe} oder einer Gruppe von
    \hyperref[itm:04-18]{Unternehmen}, die eine gemeinsame Wirtschaftstätigkeit ausüben, und die Überwachungssysteme am
     Arbeitsplatz.
   \label{itm:88-2}
